--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.5.3",
+    "discord-buttons": "^3.2.1",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "get-youtube-playlist-id": "0.0.1",
